--- a/app/assets/stylesheets/base/search.scss
+++ b/app/assets/stylesheets/base/search.scss
@@ -536,6 +536,7 @@
   font-size: 20px;
   color: #34373D;
   margin-bottom: 2px;
+  padding-right: 150px;
 }
 
 .fsmInfo {
